Update index.html     ai

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         };
 
         // --- 2. GEMINI AI CONFIGURATION ---
-        const manualGeminiKey = ""; 
+        const manualGeminiKey = "AIzaSyA-H3Cg7BkGIV7W9niiY3HbURjPPT9DXmo"; 
 
         // --- TRANSLATIONS ---
         const translations = {
@@ -942,3 +942,4 @@
 
 </body>
 </html>
+
